# limitless-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: limitless.rb
src/: auth.rs  config.rs  constants.rs  main.rs  shell.rs
src/client/: markets.rs  mod.rs  portfolio.rs  profiles.rs  public_portfolio.rs  trading.rs
src/commands/: approve.rs  markets.rs  mod.rs  orderbook.rs  portfolio.rs  profiles.rs  setup.rs  trading.rs  wallet.rs
src/output/: markets.rs  mod.rs  orderbook.rs  portfolio.rs  profiles.rs  trading.rs
src/signing/: mod.rs  order.rs
src/tui/: app.rs  mod.rs  ui.rs  vwap.rs
