[package]
name = "limitless-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "CLI for Limitless Exchange — browse markets, trade, and manage positions"
license = "MIT"
keywords = ["limitless", "prediction-markets", "trading", "cli", "base"]
categories = ["command-line-utilities"]

[[bin]]
name = "limitless"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
alloy = { version = "1", features = ["providers", "sol-types", "contract", "reqwest-rustls-tls", "signer-local", "signers"] }
tabled = "0.17"
rust_decimal = { version = "1", features = ["serde-with-str"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hex = "0.4"
getrandom = "0.3"
rustyline = "15"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
